public static class AnimKeyTable
{
	public const string isMove = "isMove";
	public const string onAttack = "OnAttack";
	public const string onSkill = "OnSkill";
	public const string onUltimate = "OnUltimate";
	public const string onDeath = "OnDeath";
	public const string onRevival = "OnRevival";
	public const string onAnimEnd = "OnAnimEnd";

	public const string effect = "Effect";
}